--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,25 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: root
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 logging:
   level:
     root: info
     com.lrm: debug
-  file: log/blog-dev.log
+  file:
+    name: log/blog-dev.log
 
-
-comment.touristAvatar: /images/touristAvatar.png
-comment.userAvatar: /images/userAvatar.png
+comment:
+  touristAvatar: /images/touristAvatar.png
+  userAvatar: /images/userAvatar.png
