--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8081
 spring:
   application:
     name: blog-service
@@ -14,6 +16,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+#Config server
+  config:
+    import: "optional:configserver:http://localhost:8080"
+  profiles:
+    active: dev
 
 logging:
   level:
@@ -33,4 +40,38 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+#Zipkin
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
+#Actuator
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include=*:
+  endpoint:
+    health:
+      show-details: always
+
+#Resilience4j
+resilience4j:
+  circuitbreaker:
+    instances:
+      companyBreaker:
+        registerHealthIndicator: true
+        sliding-window-size: 10
+        minimumNumberOfCalls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        register-health-indicator: true
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        sliding-window-type: COUNT_BASED
+        eventConsumerBufferSize: 10
 
