--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,13 @@ spring:
     import: "optional:configserver:http://localhost:8080"
   profiles:
     active: dev
-
+#RabbitMQ
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+#    virtual-host: /
 logging:
   level:
     root: info
