update basic feign config

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
+		<!--openfeign-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 		<!--micrometer-->
 		<dependency>
 			<groupId>io.micrometer</groupId>
