--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,7 +1,7 @@
 blog-service:
-    url: http://localhost:8081
+  url: http://blog:8081
 comment-service:
-    url: http://localhost:8082
+  url: http://comment:8082
 
 server:
   port: 8081
@@ -10,7 +10,7 @@ spring:
     name: blog-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: root
   jpa:
@@ -23,12 +23,12 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
 #Config server
   config:
-    import: "optional:configserver:http://localhost:8080"
+    import: "optional:configserver:http://config-server:8080"
   profiles:
     active: dev
 #RabbitMQ
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
@@ -50,10 +50,13 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://service-reg:8761/eureka
 
 #Zipkin
 management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
   tracing:
     sampling:
       probability: 1.0
